# DLsite-Analyzer

./: .gitignore  README.md  dlsite_data_analysis.ipynb  main.py  pyproject.toml  requirements.txt  test.ipynb  test_morpheme.ipynb  text_analysis_wordcloud.ipynb
devscripts/: test.py
dlsite_analyzer/: __init__.py  __main__.py  config.py  database_initializer.py  text_analyzer.py
dlsite_analyzer/database/: __init__.py  common.py  constants.py  database_manager.py  table_managers.py
dlsite_analyzer/database/table_managers/: __init__.py  age_rating.py  authors.py  categories.py  circles.py  makers.py  product_format.py  voice_authors.py  voice_works.py
dlsite_analyzer/database/view_managers/: __init__.py  voice_works.py
dlsite_analyzer/scraper/: __init__.py  voice_work_scraper.py
dlsite_analyzer/utils/: __init__.py  file_util.py  logger.py  os_util.py
