[tool.poetry]
name = "DLsite-Analyzer"
version = "0.1.0"
description = ""
authors = ["ARM0930 <72128692+XXXFQ@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
colorlog = "^6.9.0"
japanize-matplotlib = "^1.1.3"
matplotlib = "^3.9.2"
mecab-python3 = "^1.0.10"
pandas = "^2.2.3"
requests = "^2.32.3"
tqdm = "^4.67.0"
unidic-lite = "^1.0.8"
wordcloud = "^1.9.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
